// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results renders correctly (empty suppressions) 1`] = `
<div>
  <h6>
    There are no results for your current query
  </h6>
</div>
`;

exports[`Results renders correctly (with suppressions) 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Recipient",
      },
      Object {
        "label": "Type",
        "width": "18%",
      },
      Object {
        "label": "Source",
        "width": "20%",
      },
      Object {
        "label": "",
        "width": "15%",
      },
    ]
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "recipient": "rec1@dom.com",
        "source": "Manually added",
        "type": "Transactional",
      },
      Object {
        "recipient": "rec2@dom.com",
        "source": "Manually added",
        "subaccount_id": 101,
        "type": "Non-transactional",
      },
    ]
  }
/>
`;

exports[`Results renders correctly (with suppressions, with subaccount) 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Recipient",
      },
      Object {
        "label": "Type",
        "width": "18%",
      },
      Object {
        "label": "Source",
        "width": "20%",
      },
      Object {
        "label": "Subaccount",
        "width": "18%",
      },
      Object {
        "label": "",
        "width": "15%",
      },
    ]
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "recipient": "rec1@dom.com",
        "source": "Manually added",
        "type": "Transactional",
      },
      Object {
        "recipient": "rec2@dom.com",
        "source": "Manually added",
        "subaccount_id": 101,
        "type": "Non-transactional",
      },
    ]
  }
/>
`;

exports[`Results renders correctly on initial loading 1`] = `
<div>
  <h6>
    Choose some options to see your suppressions
  </h6>
</div>
`;
